css/header.css
/*
===================================
===================================
Styles for an individual page

- Rename this file to match the page you are working on (e.g. home.css, about.css, etc.)
- Create a new file for your page and link this file to it in the <head> of your HTML document
- Variables from global.css will work in this CSS file as well. Do not add any variables to this file.
===================================
===================================
*/

/* 
===================================
Page Component Styles (icon grid, team member card)
===================================
*/

/* 
===================================
Section Styles (background, padding, etc.)
===================================
*/
body {
	font-family: var(--main-font);
}

/* img {
	display: block;
	max-width: 100%;
} */

.img-container {
	max-width: 390px;
	/* for dev purpose only */
}

/* .block {
	display: block;
} */



/* top bar section */
.top-bar {
	background-color: var(--color-onyx);
	color: var(--color-white);
	display: flex;
	justify-content: space-around;
	align-items: center;
	padding: 20px;
}
.dp-wrapper {
width: var(--mobile-wrapper-width);
display: flex;
justify-content: space-between;
}


.logo-container {
	display: flex;
	margin-right: 65px;
}

/* desktop menu */
.desktop-menu {
	display: none;
	flex-direction: row;
	align-items: center;
}

.desktop-nav {
	list-style-type: none;
	text-decoration: none;
	display: flex;
	justify-content: space-between;
	padding: 0;
}

.desktop-nav li {
	padding: 10px 20px;
}

a {
	text-decoration: none;
	color: inherit;
}

a:hover,
a:focus {
	text-decoration: underline;
	cursor: pointer;
}

a:visited {
	color: inherit;
}

.button2 {
	margin-left: 65px;
	display: none;
}

/* mobile menu button style */
#mobile-menu {
	background-color: transparent;
	border: 0px;
	padding: 0;
	align-items: center;
	display: flex;
}

#mobile-menu svg {
	fill: var(--color-white);
}

/* menu container */
#menu-container {
	position: relative;
	display: flex;
	align-items: center;
	/* overflow: hidden; */
}

.img-container {
	/* display: flex; */
	/* justify-content: center; */
	margin: auto;
}

/* heading for text */
.text-container {
	text-align: center;
}

#nav-links-container {
	position: absolute;
	top: 50px;
	bottom: 0px;
	right: -20px;
	z-index: 10;
}

/* nav-links style */
#nav-links {
	display: flex;
	list-style-type: none;
	margin: 0;
	gap: 20px;
	flex-direction: column;
	background-color: var(--color-onyx);
	width: 200px;
	height: auto;
	overflow: hidden;
	padding: 28px 55px 44px 46px;
}

#nav-links a {
	color: var(--color-white);
	text-decoration: none;
	font-weight: var(--font-weight-regular);
	font-size: var(--font16);
}

.hidden {
	display: none;
}

/* The Mobile X */
#mobileClose {
	display: hidden;
}

/* 
===================================
Media Queries (overriding styles for different screen sizes)

Note: Here we are using a mobile-first approach, so we start with the smallest screen size and work our way up.
Start by writing styles for the mobile version of the design on the lines above.
Anything that needs to change for larger screens should be added to the media queries below.

Feel free to change the min/max-width values to whatever you need. Use variables.
===================================
*/

/* Tablet Only */
@media screen and (min-width: 768px) and (max-width: 1024px) {
	/* Add styles that only apply to tablet. These are usually fixes to get resposnivenes right */
}

/* Tablet and Larger */
@media screen and (min-width: 768px) {
	/* Add styles that apply to table and desktop */
}

/* Desktop Only */
@media screen and (min-width: 1100px) {
	/* Add styles that apply specifically to desktop */
}

/* Desktop & Larger */

@media screen and (min-width: 1100px) {
	/* adjusting font sizes and styling for p tags (in figma this is body1)*/
	a {
		font-weight: var(--font-weight-regular);
		/* font-size: var(--font16); */
		line-height: var(--line-height26);
	}

	/* hide menu bar for larger screen */
	#menu-container {
		display: none;
	}

	.desktop-menu {
		display: flex;
	}

	/* top bar positioning shanangings */
	header {
		position: relative;
	}

	.top-bar {
		position: absolute;
		width: 100%;
		z-index: 20;
	}

	.button2 {
		font-family: var(--main-font);
		display: flex;
		width: 194px;
		height: 50px;
		padding: 10px 40px;
		justify-content: center;
		align-items: center;
		gap: 10px;
		flex-shrink: 0;
		border-radius: 10px;
		background: var(--button2-color);
		color: var(--color-white);
		cursor: pointer;
		border: none;
		font-size: var(--font21);
		font-weight: var(--font-weight-bold);
		line-height: var(--line-height32);
	}

	.button2:hover {
		background: var(--color-white);
		/* border: 3px solid var(--button3-color); */
		color: var(--color-onyx);
		text-decoration: none;
	}
	.dp-wrapper {
		max-width: var(--desktop-wrapper-width);
		display: flex;
		justify-content: space-between;
		align-items: center;
	}
	.logo-icon {
	min-width: 205px;
	}
}

